--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "firebase": "^8.1.2",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^2.6.14",
